@@ -15,6 +15,7 @@
 	js : replaced $closure by function.$bind + change in output format
 	all : allowed @:extern on static methods (no generate + no closure + force inlining)
 	all : added documentation in --display infos
+	all : display overloads in completion
 
 2011-09-25: 2.08
 	js : added js.JQuery
